<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/root_view">

    <RelativeLayout
        android:id="@+id/rl_infor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0049B6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:text="@string/them_sinh_vien"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_go_back_left_arrow_white"
            android:layout_margin="10dp"/>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rl_infor"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/nhap_ma_sinh_vien"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/edt_msv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/background_edittext"
                android:hint="@string/nhap_ma_sinh_vien"
                android:padding="10dp"
                android:textSize="13sp"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv2" />


            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/nhap_ho_ten"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_msv" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/background_edittext"
                android:hint="Nhập họ tên"
                android:padding="10dp"
                android:textSize="13sp"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv3" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/nhap_gioi_tinh"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@+id/tv5"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_name" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/nhap_lop"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/tv4"
                app:layout_constraintTop_toBottomOf="@id/edt_name" />

            <EditText
                android:id="@+id/edt_sex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/background_edittext"
                android:hint="@string/nhap_gioi_tinh"
                android:padding="10dp"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@+id/edt_class"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv4" />

            <EditText
                android:id="@+id/edt_class"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/background_edittext"
                android:hint="@string/nhap_lop"
                android:padding="10dp"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/edt_sex"
                app:layout_constraintTop_toBottomOf="@id/tv4" />

            <TextView
                android:id="@+id/tv6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/nhap_diem_toan"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@+id/tv5"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_class" />

            <TextView
                android:id="@+id/tv7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/nhap_diem_hoa"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/tv4"
                app:layout_constraintTop_toBottomOf="@id/edt_class" />

            <EditText
                android:id="@+id/edt_match_point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/background_edittext"
                android:hint="@string/nhap_diem_toan"
                android:padding="10dp"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@+id/edt_chemistry_point"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv6" />

            <EditText
                android:id="@+id/edt_chemistry_point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/background_edittext"
                android:hint="@string/nhap_diem_hoa"
                android:padding="10dp"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/edt_match_point"
                app:layout_constraintTop_toBottomOf="@id/tv7" />

            <TextView
                android:id="@+id/tv8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/nhap_diem_ly"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_match_point" />

            <EditText
                android:id="@+id/edt_physical_point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/background_edittext"
                android:hint="@string/nhap_diem_ly"
                android:padding="10dp"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@+id/edt_chemistry_point"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv8" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_save_infor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/background_button"
        android:text="@string/luu_thong_tin"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>